--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/sam.heic" alt=""></td>
+      <td><img src="images/sam.HEIC" alt=""></td>
       <td><h1>Collins Samuel</h1>
         <p><em>Well, it's just me <strong>for now</strong>.</em></p>
         <p>I am a <a href="https://oouagoiwoye.edu.ng/">pharmacology</a> student and I love life science and tech.</p>
